Added support for BINARY_DOUBLE and BINARY_FLOAT to PDO_OCI and OCI8 (also fixes bug #36764)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_1@209616 c90b9560-bf6c-de11-be94-00142212c4b1